--- a/Pages/main/main.html
+++ b/Pages/main/main.html
@@ -15,22 +15,19 @@
 
 /* Management Panel */
 .management-panel { margin-bottom: 1.5rem; }
-.item-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 0.5rem; }
-.inventory-item { background: #222; padding: 0.5rem 0.75rem; border-radius: 2px; font-size: 0.85rem; color: #ccc; border: 1px solid #333; display: flex; justify-content: space-between; }
-.inventory-item strong { color: #fff; font-weight: normal; }
+.inventory-item { background: #222; padding: 0.2rem 0.5rem; border-radius: 2px; font-size: 0.85rem; color: #ccc; border: 1px solid #333; display: flex; justify-content: space-between; }
 
 .dungeon-floor-grid { display: flex; flex-direction: column; gap: 0.5rem; }
 .dungeon-floor { background: #1a1a1a; padding: 0.75rem; border-left: 2px solid #444; font-size: 0.9rem; }
 .dungeon-floor strong { color: #60d9f7; margin-right: 0.5rem; }
 
-.section-label { font-size: 0.75rem; color: #666; text-transform: uppercase; margin-bottom: 0.5rem; display: block; border-bottom: 1px solid #222; }
+.section-label { font-weight: 600; color: #ddd; text-transform: uppercase; margin-bottom: 0.5rem; display: block; border-bottom: 1px solid #222; }
 
 /* Mobile Optimization */
 @media screen and (max-width: 400px) {
 .character-display { padding: 0.75rem; gap: 0.75rem; }
 .character-portrait { width: 60px; height: 60px; }
 .panel-header h2 { font-size: 1rem; width: 100%; }
-.item-grid { grid-template-columns: 1fr; }
 }
 </style>
 
@@ -90,9 +87,9 @@
 {{/if}}
 
 <span class="section-label">도구</span>
-<div class="item-grid">
+<div class="info-grid">
 {{settempvar::tools::0}}
-{{#each {{getvar::조교도구List}} tool}}
+{{#each {{getvar::toolsList}} tool}}
 {{#if {{? {{dict_element::{{getvar::inventory}}::{{slot::tool}}}}==1}}}}
 <div class="inventory-item"><span>{{slot::tool}}</span></div>
 {{settempvar::tools::1}}
@@ -102,9 +99,9 @@
 </div>
 
 <span class="section-label" style="margin-top:1rem;">소모품</span>
-<div class="item-grid">
+<div class="info-grid">
 {{settempvar::consumables::0}}
-{{#each {{getvar::소모품List}} consumable}}
+{{#each {{getvar::consumablesList}} consumable}}
 {{#if {{? {{tonumber::{{dict_element::{{getvar::inventory}}::{{slot::consumable}}}}}}>0}}}}
 <div class="inventory-item"><span>{{slot::consumable}}</span> <span>x{{dict_element::{{getvar::inventory}}::{{slot::consumable}}}}</span></div>
 {{settempvar::consumables::1}}
