--- a/Pages/train/preTrain.html
+++ b/Pages/train/preTrain.html
@@ -23,6 +23,7 @@ height: 0.3rem !important;
 {{getvar::charList}}
 
 </main>
+<div class="line double"></div>
+{{getvar::cmds}}
 </div>
 
-{{getvar::cmds}}
