--- a/Pages/chars/charList.html
+++ b/Pages/chars/charList.html
@@ -34,6 +34,7 @@ height: 0.3rem !important;
 {{getvar::charList}}
 
 </main>
+<div class="line double"></div>
+{{getvar::cmds}}
 </div>
 
-{{getvar::cmds}}
