카르마 삭제 공격력 방어력을 dnd룰 스타일로 표기 전투력대신 레이팅이라는 시스템 구현을 위한 사전db작업

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -248,7 +248,7 @@
 <div class="stats-grid">
 <span><strong>공격:</strong> {{dict_element::{{getvar::target}}::공격력}}</span>
 <span><strong>방어:</strong> {{dict_element::{{getvar::target}}::방어력}}</span>
-<span><strong>카르마:</strong> {{dict_element::{{getvar::target}}::카르마}}</span>
+<span><strong>레이팅:</strong> {{dict_element::{{getvar::target}}::레이팅}}</span>
 <span><strong>소지금:</strong> {{dict_element::{{getvar::target}}::소지금}}</span>
 <span><strong>빚:</strong> {{dict_element::{{getvar::target}}::빚}}</span>
 </div>
@@ -423,10 +423,10 @@
 <span class="item-type">【무기】</span><span>{{dict_element::{{getvar::target}}::무기}}</span>
 </div>
 <div class="equipment-item">
-<span class="item-type">【반지A】</span><span>{{dict_element::{{getvar::target}}::반지1}}</span>
+<span class="item-type">【방어구】</span><span>{{dict_element::{{getvar::target}}::방어구}}</span>
 </div>
 <div class="equipment-item">
-<span class="item-type">【반지B】</span><span>{{dict_element::{{getvar::target}}::반지2}}</span>
+<span class="item-type">【장신구】</span><span>{{dict_element::{{getvar::target}}::장신구}}</span>
 </div>
 </div>
 </section>
