--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -557,21 +557,14 @@ S쾌락은 일단 숨겨두기
 <div class="line single"></div>
 
 <div class="tabs-container">
-<input type="radio" name="tabs" id="애무계" hidden {{#if {{equal::{{getvar::category}}::애무계}}}}checked{{/if}}>
-<label for="애무계" class="tabs" risu-btn="1">[1] 애무계</label>
-<input type="radio" name="tabs" id="도구계" hidden {{#if {{equal::{{getvar::category}}::도구계}}}}checked{{/if}}>
-<label for="도구계"class="tabs" risu-btn="2">[2] 도구계</label>
-<input type="radio" name="tabs" id="V계" hidden {{#if {{equal::{{getvar::category}}::V계}}}}checked{{/if}}>
-<label for="V계"class="tabs" risu-btn="3">[3] V계</label>
-<input type="radio" name="tabs" id="A계" hidden {{#if {{equal::{{getvar::category}}::A계}}}}checked{{/if}}>
-<label for="A계"class="tabs" risu-btn="4">[4] A계</label>
-<input type="radio" name="tabs" id="봉사계" hidden {{#if {{equal::{{getvar::category}}::봉사계}}}}checked{{/if}}>
-<label for="봉사계"class="tabs" risu-btn="5">[5] 봉사계</label>
-<input type="radio" name="tabs" id="소모품" hidden {{#if {{equal::{{getvar::category}}::소모품}}}}checked{{/if}}>
-<label for="소모품"class="tabs" risu-btn="6">[6] 소모품</label>
+<div class="tabs {{#if {{equal::{{getvar::category}}::애무계}}}}active{{/if}}" risu-btn="1">[1] 애무계</div>
+<div class="tabs {{#if {{equal::{{getvar::category}}::도구계}}}}active{{/if}}" risu-btn="2">[2] 도구계</div>
+<div class="tabs {{#if {{equal::{{getvar::category}}::V계}}}}active{{/if}}" risu-btn="3">[3] V계</div>
+<div class="tabs {{#if {{equal::{{getvar::category}}::A계}}}}active{{/if}}" risu-btn="4">[4] A계</div>
+<div class="tabs {{#if {{equal::{{getvar::category}}::봉사계}}}}active{{/if}}" risu-btn="5">[5] 봉사계</div>
+<div class="tabs {{#if {{equal::{{getvar::category}}::소모품}}}}active{{/if}}" risu-btn="6">[6] 소모품</div>
 {{#when::{{? {{tonumber::{{dict_element::{{getvar::target}}::레벨}}}}>3}}}}
-<input type="radio" name="tabs" id="하드계" hidden {{#if {{equal::{{getvar::category}}::하드계}}}}checked{{/if}}>
-<label for="하드계"class="tabs" risu-btn="9">[9] 하드계</label>
+<div class="tabs {{#if {{equal::{{getvar::category}}::하드계}}}}active{{/if}}" risu-btn="9">[9] 하드계</div>
 {{/when}}
 </div>
 <div class="tab-content">
