--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -423,5 +423,5 @@
 </main>
 
 <div class="line double"></div>
-<div class="btn command-btn" risu-btn="199">돌아가기</div>
+<div class="btn command-btn" risu-btn="199">[199] 돌아가기</div>
 </div>
