수정구영상 기록 구현 실제 기록을 둘러보는건 미구현

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -370,7 +370,7 @@
 </section>
 
 <div class="line single"></div>
-
+{{#when::{{dict_element::{{getvar::target}}::이름}}::isnot::{{user}}}}
 <section class="marks-section">
 <h2>* 각인</h2>
 <div class="marks-grid">
@@ -397,6 +397,7 @@
 </section>
 
 <div class="line single"></div>
+{{/when}}
 
 <section class="equipment-section">
 <h2>* 장비</h2>
