--- a/Pages/main/intro.html
+++ b/Pages/main/intro.html
@@ -1,4 +1,16 @@
 <style>
+h2 {
+    border-bottom: none;
+    margin:0;
+    color:#555;
+}
+
+.setting-description{
+    margin-top: 0.3rem;
+    margin-bottom: 0.6rem;
+    color:#888
+}
+
 .text-input {
 width: 100%;
 background-color: #2a2a2a;
@@ -35,10 +47,11 @@ border-color: #888;
 <div class="tab-content">
 <div class="info-grid">
 {{#when::category::vis::user}}
-<div style="grid-column: 1 / -1;"><h3>* 기본 정보</h3></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 기본 정보</h2></div>
 <div class='btn command-btn' risu-btn='userGender'><strong>성별: </strong>{{dict_element::{{getvar::user}}::성별}}</div>
 <div class='btn command-btn' risu-btn='userAge'><strong>외형: </strong>{{dict_element::{{getvar::user}}::외형}}</div>
-<div style="grid-column: 1 / -1; margin-top: 1rem;"><h3>* 신체 정보</h3></div>
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 신체 정보</h2></div>
 {{#if {{notequal::{{dict_element::{{getvar::user}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='userBreast'><strong>가슴: </strong>{{dict_element::{{getvar::user}}::가슴}}</div>{{/if}}
 {{#if {{notequal::{{dict_element::{{getvar::user}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='userTit'><strong>유두: </strong>{{dict_element::{{getvar::user}}::유두}}</div>{{/if}}
 <div class='btn command-btn' risu-btn='userPubes'><strong>음모: </strong>{{dict_element::{{getvar::user}}::음모}}</div>
@@ -47,10 +60,11 @@ border-color: #888;
 {{/when}}
 
 {{#when::category::vis::king}}
-<div style="grid-column: 1 / -1;"><h3>* 기본 정보</h3></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 기본 정보</h2></div>
 <div class='btn command-btn' risu-btn='kingGender'><strong>성별: </strong>{{dict_element::{{getvar::king}}::성별}}</div>
 <div class='btn command-btn' risu-btn='kingAge'><strong>외형: </strong>{{dict_element::{{getvar::king}}::외형}}</div>
-<div style="grid-column: 1 / -1; margin-top: 1rem;"><h3>* 신체 정보</h3></div>
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 신체 정보</h2></div>
 {{#if {{notequal::{{dict_element::{{getvar::king}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='kingBreast'><strong>가슴: </strong>{{dict_element::{{getvar::king}}::가슴}}</div>{{/if}}
 {{#if {{notequal::{{dict_element::{{getvar::king}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='kingTit'><strong>유두: </strong>{{dict_element::{{getvar::king}}::유두}}</div>{{/if}}
 <div class='btn command-btn' risu-btn='kingPubes'><strong>음모: </strong>{{dict_element::{{getvar::king}}::음모}}</div>
@@ -59,39 +73,7 @@ border-color: #888;
 {{/when}}
 
 {{#when::category::vis::play}}
-<div class='two-cells' risu-btn='difficulty'>
-<label><b>조교 난이도</b></label>
-<label class="triple-switch">
-<input type="radio" name="difficulty" id="one" {{#when::difficulty::vis::쉬움}}checked{{/when}}>
-<input type="radio" name="difficulty" id="two" {{#when::difficulty::vis::보통}}checked{{/when}}>
-<input type="radio" name="difficulty" id="three" {{#when::difficulty::vis::어려움}}checked{{/when}}>
-<span class="triple-slider"></span>
-</label>
-{{#when::difficulty::vis::쉬움}}
-<p class="setting-description">조교의 성공확률이 상승합니다.</p>
-{{/when}}
-{{#when::difficulty::vis::보통}}
-<p class="setting-description">밸런스 잡힌 난이도입니다.</p>
-{{/when}}
-{{#when::difficulty::vis::어려움}}
-<p class="setting-description">조교가 상당히 어려워집니다.</p>
-{{/when}}
-</div>
-
-<div class="two-cells" risu-btn="blockDeath">
-<label><b>사망 방지</b></label>
-<label class="switch">
-<input type="checkbox" name="death-prevent" {{#when::blockDeath::vis::1}}checked{{/when}}>
-<span class="slider"></span>
-</label>
-{{#when::blockDeath::vis::0}}
-<p class="setting-description">체력이 0이 되면 캐릭터가 영구적으로 사망합니다.</p>
-{{/when}}
-{{#when::blockDeath::vis::1}}
-<p class="setting-description">체력이 0이 되어도 캐릭터가 사망하지 않습니다.</p>
-{{/when}}
-</div>
-
+<div style="grid-column: 1 / -1;"><h2>▷ 일반 설정</h2></div>
 <div class='two-cells' risu-btn='ageLimit'>
 <label><b>용사 나이 제한</b></label>
 <label class="triple-switch">
@@ -111,10 +93,162 @@ border-color: #888;
 {{/when}}
 </div>
 
+<div class='two-cells' risu-btn='ntrLimit'>
+<label><b>NTR</b></label>
+<label class="triple-switch">
+<input type="radio" name="ntrLimit" id="one" {{#when::ntrLimit::vis::0}}checked{{/when}}>
+<input type="radio" name="ntrLimit" id="two" {{#when::ntrLimit::vis::1}}checked{{/when}}>
+<input type="radio" name="ntrLimit" id="three" {{#when::ntrLimit::vis::2}}checked{{/when}}>
+<span class="triple-slider"></span>
+</label>
+{{#when::ntrLimit::vis::0}}
+<p class="setting-description">[제한 없음] 유저에게 함락당했더라도 다른 존재에게 빼앗길 수 있습니다.</p>
+{{/when}}
+{{#when::ntrLimit::vis::1}}
+<p class="setting-description">[제한적 ntr] 유저에게 함락당했다면 마음만은 다른 존재에게 주지 않습니다.</p>
+{{/when}}
+{{#when::ntrLimit::vis::2}}
+<p class="setting-description">[ntr 금지] ntr이벤트가 원천차단됩니다. 주요 이벤트의 발생이 일어나지 않을 수 있습니다.</p>
+{{/when}}
+</div>
+
+<div class="two-cells" risu-btn="futaLimit">
+<label><b>후타나리 용사 등장</b></label>
+<label class="switch">
+<input type="checkbox" name="death-prevent" {{#when::futaLimit::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+{{#when::futaLimit::vis::0}}
+<p class="setting-description">후타나리 용사가 등장하지 않습니다.</p>
+{{/when}}
+{{#when::futaLimit::vis::1}}
+<p class="setting-description">후타나리 용사가 등장합니다.</p>
+{{/when}}
+</div>
+
+<div class="two-cells" risu-btn="maleLimit">
+<label><b>남성 용사 등장</b></label>
+<label class="switch">
+<input type="checkbox" name="death-prevent" {{#when::maleLimit::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+{{#when::maleLimit::vis::0}}
+<p class="setting-description">남성 용사가 등장하지 않습니다.</p>
+{{/when}}
+{{#when::maleLimit::vis::1}}
+<p class="setting-description">남성 용사가 등장합니다.</p>
+{{/when}}
+</div>
+
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 조교 관련 설정</h2></div>
+
+<div class='two-cells' risu-btn='trainDifficulty'>
+<label><b>조교 난이도</b></label>
+<label class="triple-switch">
+<input type="radio" name="trainDifficulty" id="one" {{#when::trainDifficulty::vis::쉬움}}checked{{/when}}>
+<input type="radio" name="trainDifficulty" id="two" {{#when::trainDifficulty::vis::보통}}checked{{/when}}>
+<input type="radio" name="trainDifficulty" id="three" {{#when::trainDifficulty::vis::어려움}}checked{{/when}}>
+<span class="triple-slider"></span>
+</label>
+{{#when::trainDifficulty::vis::쉬움}}
+<p class="setting-description">조교의 성공확률이 상승합니다.</p>
+{{/when}}
+{{#when::trainDifficulty::vis::보통}}
+<p class="setting-description">밸런스 잡힌 난이도입니다.</p>
+{{/when}}
+{{#when::trainDifficulty::vis::어려움}}
+<p class="setting-description">조교가 상당히 어려워집니다.</p>
+{{/when}}
+</div>
+
+<div class="two-cells" risu-btn="blockDeath">
+<label><b>사망 방지</b></label>
+<label class="switch">
+<input type="checkbox" name="death-prevent" {{#when::blockDeath::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+{{#when::blockDeath::vis::0}}
+<p class="setting-description">체력이 0이 되면 캐릭터가 영구적으로 사망합니다.</p>
+{{/when}}
+{{#when::blockDeath::vis::1}}
+<p class="setting-description">체력이 0이 되어도 캐릭터가 사망하지 않습니다.</p>
+{{/when}}
+</div>
+
+<div class="two-cells" risu-btn="trainTargetPanel">
+<label><b>대상 정보패널 상단고정</b></label>
+<label class="switch">
+<input type="checkbox" name="death-prevent" {{#when::trainTargetPanel::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+{{#when::trainTargetPanel::vis::0}}
+<p class="setting-description">화면 스크롤 시 조교대상의 체력/기력바가 화면 밖으로 사라집니다.</p>
+{{/when}}
+{{#when::trainTargetPanel::vis::1}}
+<p class="setting-description">스크롤을 해도 조교 대상의 체력/기력바가 화면 상단에 고정됩니다.</p>
+{{/when}}
+</div>
+
+<div class="two-cells" risu-btn="trainUserPanel">
+<label><b>유저 사정게이지 상단고정</b></label>
+<label class="switch">
+<input type="checkbox" name="death-prevent" {{#when::trainUserPanel::vis::1}}checked{{/when}}>
+<span class="slider"></span>
+</label>
+{{#when::trainUserPanel::vis::0}}
+<p class="setting-description">화면 스크롤 시 {{user}}의 사정 게이지가 화면 밖으로 사라집니다.</p>
+{{/when}}
+{{#when::trainUserPanel::vis::1}}
+<p class="setting-description">스크롤을 해도 {{user}}의 사정 게이지가 화면 상단에 고정됩니다.</p>
+{{/when}}
+</div>
+
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 전투 관련 설정</h2></div>
+
+<div class='two-cells' risu-btn='combatDifficulty'>
+<label><b>전투 난이도</b></label>
+<label class="triple-switch">
+<input type="radio" name="combatDifficulty" id="one" {{#when::combatDifficulty::vis::쉬움}}checked{{/when}}>
+<input type="radio" name="combatDifficulty" id="two" {{#when::combatDifficulty::vis::보통}}checked{{/when}}>
+<input type="radio" name="combatDifficulty" id="three" {{#when::combatDifficulty::vis::어려움}}checked{{/when}}>
+<span class="triple-slider"></span>
+</label>
+{{#when::combatDifficulty::vis::쉬움}}
+<p class="setting-description">전투의 각종 판정에 보너스를 받습니다.</p>
+{{/when}}
+{{#when::combatDifficulty::vis::보통}}
+<p class="setting-description">밸런스 잡힌 난이도입니다.</p>
+{{/when}}
+{{#when::combatDifficulty::vis::어려움}}
+<p class="setting-description">전투가 상당히 어려워집니다.</p>
+{{/when}}
+</div>
+
+<div class='two-cells' risu-btn='heroLvLimit'>
+<label><b>용사 레벨제한</b></label>
+<label class="triple-switch">
+<input type="radio" name="heroLvLimit" id="one" {{#when::heroLvLimit::vis::0}}checked{{/when}}>
+<input type="radio" name="heroLvLimit" id="two" {{#when::heroLvLimit::vis::5}}checked{{/when}}>
+<input type="radio" name="heroLvLimit" id="three" {{#when::heroLvLimit::vis::10}}checked{{/when}}>
+<span class="triple-slider"></span>
+</label>
+{{#when::heroLvLimit::vis::0}}
+<p class="setting-description">던전레벨보다 높은 레벨의 용사가 등장하지 않습니다.</p>
+{{/when}}
+{{#when::heroLvLimit::vis::5}}
+<p class="setting-description">던전레벨보다 최대 5레벨 높은 용사까지 등장할 수 있습니다.</p>
+{{/when}}
+{{#when::heroLvLimit::vis::10}}
+<p class="setting-description">던전레벨보다 최대 10레벨 높은 용사까지 등장할 수 있습니다.</p>
+{{/when}}
+</div>
 {{/when}}
 
 
 {{#when::category::vis::system}}
+<div style="grid-column: 1 / -1;"><h2>▷ 일반 설정</h2></div>
 <div class="two-cells" risu-btn="showLog">
 <label><b>로그 표시</b></label>
 <label class="switch">
@@ -145,7 +279,9 @@ border-color: #888;
 {{/when}}
 </div>
 
-<div style="grid-column: 1 / -1;"><h3>* 모델 선택</h3></div>
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 모델 선택</h2></div>
+
 <div class="two-cells" risu-btn="trainResponse">
 <label><b>조교 반응</b></label>
 <label class="switch">
