미성년 금지 설정 선택시 마오 나이/몸매 변경

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -225,7 +225,7 @@
 <h2>{{dict_element::{{getvar::target}}::이름}} Lv.{{dict_element::{{getvar::target}}::레벨}}</h2>
 <p><strong>종족:</strong> {{dict_element::{{getvar::target}}::종족}}</p>
 <p><strong>성별:</strong> {{dict_element::{{getvar::target}}::성별}}</p>
-<p><strong>직업:</strong> {{dict_element::{{getvar::target}}::클래스}}</p>
+<p><strong>클래스:</strong> {{dict_element::{{getvar::target}}::클래스}}</p>
 <p><strong>나이:</strong> {{dict_element::{{getvar::target}}::나이}}</p>
 </div>
 </div>
